# thesis-1

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  config.yaml  math_specs.md  overleaf.md  patterns.md  pyproject.toml  visualize_toy_examples.py
.claude/: settings.local.json
agent_docs/: architecture.md  experiments.md  math_specs.md  patterns.md
docs/plans/: 2026-01-23-spectral-viz-redesign-design.md  2026-01-28-grassmann-invariant-flow-design.md
examples/: ts_gfm_demo.py
figures/: .gitkeep
src/temporal_spectral_flow/: __init__.py  alignment.py  flow.py  graph.py  grassmann.py  inference.py  joint_flow.py  losses.py  riemannian_flow.py  riemannian_training.py  spectral.py  stiefel.py  tid.py  training.py  transport.py
src/viz/: __init__.py  app.py  generators.py  spectral_app.py  static.py  styles.py
src/viz/.claude/: settings.local.json
src/viz/components/: __init__.py  eigenvalue_panel.py  eigenvector_panel.py  embedding_panel.py
src/viz/pages/: 1_merging_clusters.py  2_evolving_graph.py
tests/: __init__.py  test_alignment.py  test_flow.py  test_graph.py  test_grassmann.py  test_riemannian_flow.py  test_riemannian_training.py  test_spectral.py  test_stiefel.py  test_tid.py  test_toy_examples.py  test_transport.py  test_viz.py
