[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-spectral-flow"
version = "0.1.0"
description = "Temporal Spectral Flow with Transport-Consistent Alignment for learning dynamical models of geometric structure evolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tomas Blood"}
]
keywords = [
    "spectral-methods",
    "optimal-transport",
    "manifold-learning",
    "temporal-dynamics",
    "stiefel-manifold",
    "intrinsic-dimension"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
ot = ["pot>=0.9.0"]   # only OT stuff
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/tomasblood/thesis-1"
"Bug Tracker" = "https://github.com/tomasblood/thesis-1/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
