[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temporal-spectral-flow"
version = "0.1.0"
description = "Temporal Spectral Flow with Transport-Consistent Alignment for learning dynamical models of geometric structure evolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Tomas Blood"}
]
keywords = [
    "spectral-methods",
    "optimal-transport",
    "manifold-learning",
    "temporal-dynamics",
    "stiefel-manifold",
    "intrinsic-dimension"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
    "pyyaml>=6.0.0",
    # CLAUDE.md required stack
    "einops>=0.7.0",
    "beartype>=0.18.0",
    "jaxtyping>=0.2.25",
    "loguru>=0.7.0",
    "accelerate>=0.25.0",
    "fire>=0.5.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
]

[project.scripts]
tsf = "cli:main"

[project.optional-dependencies]
ot = ["pot>=0.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
]

[project.urls]
"Homepage" = "https://github.com/tomasblood/thesis-1"
"Bug Tracker" = "https://github.com/tomasblood/thesis-1/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/temporal_spectral_flow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["temporal_spectral_flow"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
